# license-plate-system

./: .env.example  .gitignore  404.html  DIPLOMARBEIT_STRUKTUR.md  README.md  build.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  index.html  manual_backup.sh  mkdocs.yaml  query.txt  restore_backup.sh  restore_backups.sh  run.sh  sitemap.xml  tig_brainstorming.md
.github/workflows/: ci-cd.yaml  ci.yaml  deploy-mkdocs.yaml  docker-build.yaml
Auth/: Auth.md  JWT.py  pypath.py
db/: Dockerfile  alembic.ini  entrypoint.sh  init.sql  pyproject.toml
db-backup/: Dockerfile  backup-entrypoint.sh  backup_entrypoint.sh  crontab_entrypoint.sh
db/alembic/: env.py
db/alembic/versions/: 0b2f0687ac41_added_table.py  16e5a2f76530_base_models.py  2c41a6b6bac6_added_score_column.py  4ac78dc79b29_changed_observation_model_for_mmc.py  5c9319d59e3a_updated_lenght_of_string.py  5dc1a31469ae_added_municipality.py  5dd317ee0af9_added_table_user_preferences.py  742af4c7352f_test.py  7b262fc84013_fixed_user_preference_set_to_nnull.py  8c55083f9b00_base_table_for_data_collection.py  961d2c6f343b_updated_vehicle_obervation_model.py  97689055a5be_fix_to_model.py  97b047fbba19_make_user_name_optional.py  9ef48514a2df_initial_models.py  a11d3c920bf3_added_score_column.py  ac4745f16432_base_models.py  b5feff09ac92_added_table.py  bc02cb0db08c_fix_to_model.py  f86019e8a6e8_notification_not_set_test.py  f967c0d924ba_initial_models.py
deployment/building-images/: index.html
deployment/environment-vars/: index.html
deployment/overview/: index.html
deployment/production-setup/: index.html
development/docker-commands/: index.html
development/running-commands/: index.html
development/service-development/: index.html
development/setup/: index.html
development/troubleshooting/: index.html
docs/: index.md
docs/deployment/: building-images.md  (+3 more)
grafana/: Dockerfile  grafana.ini
javascripts/: mermaid.js
search/: search_index.json
services/analytics-service/: Dockerfile  pyproject.toml
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/src/: logger.py  main.py
services/auth-service/src/api/: deps.py  main.py
services/auth-service/src/api/routes/: auth.py
services/auth-service/src/core/: ad_client.py  config.py  security.py
services/auth-service/src/exceptions/: exception_handlers.py  exceptions.py
services/auth-service/src/schemas/: login.py
services/data-collection-service/: .dockerignore  Dockerfile  camera_control.py  main.py  models.py  municipalities.json  pyproject.toml
services/data-collection-service/src/: config.py  logger.py  main.py
services/data-collection-service/src/db/: session.py
services/data-collection-service/src/enums/: vehicle_orientation.py
services/data-collection-service/src/exceptions/: camera_exceptions.py  database_exceptions.py  plate_recognizer_exceptions.py
services/data-collection-service/src/handlers/: camera_handler.py  country_fix_handler.py  country_handler.py  database_handler.py  municipality_lookup_handler.py  plate_recognizer_handler.py
services/data-collection-service/src/models/: __init__.py  base.py  models.py  vehicle_observation.py
services/data-collection-service/src/schemas/: synology_camera.py  vehicle_detection_request.py  vehicle_observation.py
services/data-collection-service/src/tests/: camera_handler_test.py  conftest.py  country_fix_handler_test.py  country_handler_test.py  database_handler_test.py  plate_recognizer_handler_test.py
services/notification-service/: Dockerfile  logger.py  main.py  pyproject.toml  testmail.py
services/notification-service/src/: config.py  logger.py  main.py
services/notification-service/src/api/: auth.py  router.py
services/notification-service/src/api/routes/: notifications.py  user_preferences.py
services/notification-service/src/db/: session.py
services/notification-service/src/exceptions/: database_exceptions.py  sending_exceptions.py
services/notification-service/src/handlers/: database_handler.py  email_handler.py
services/notification-service/src/models/: __init__.py  base.py  user_preferences.py  vehicle_observation.py
services/notification-service/src/schemas/: notification.py  user_preferences.py
services/notification-service/src/tests/: api_test.py  conftest.py  database_handler_test.py  email_handler_test.py  notifications_api_test.py
shared-data/: Dockerfile  municipalities.json
(+36 files in other folders)
