[project]
name = "analytics-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py310"
exclude = [".venv", "*.pyi"]
src = ["app", "tests"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
