[project]
name = "data-collection-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[tool.ruff]
target-version = "py310"
exclude = [".venv", "*.pyi"]
src = ["app", "tests"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
