[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "fastapi>=0.116.1",
]
